# QC_AV_Tool

./: AV_Item.cpp  AV_Item.h  AudioObject.cpp  AudioObject.h  CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  QC_machine.pro  VideoObject.cpp  VideoObject.h  avmodel.cpp  avmodel.h  delegate.cpp  delegate.h  filetreemodel.cpp  filetreemodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  player2.cpp  player2.h  single_item_proxy.cpp  single_item_proxy.h  tester.cpp  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  ui_mainwindow.h  videoplayer.cpp  videoplayer.h
